# Loop-Subdivision

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
glsl/: StandardShading.fragmentshader  StandardShading.vertexshader
include/: OBJViewerApplication.h  OBJViewerCanvas.h  OBJViewerConstants.h
include/OBJViewer/: OBJViewerApplication.h  OBJViewerCanvas.h  OBJViewerConstants.h
include/Subdivision/: Subdivision.h  subd.h
include/WingedEdge/: Edge.h  Face.h  OBJMesh.h  Vertex.h  WEMesh.h
src/: OBJViewerApplication.cpp  OBJViewerCanvas.cpp  obj_view.cpp
src/OBJViewer/: OBJViewerApplication.cpp  OBJViewerCanvas.cpp
src/Subdivision/: LoopSubdivision.cpp  loopsubd.cpp
src/WingedEdge/: Edge.cpp  Face.cpp  OBJMesh.cpp  Vertex.cpp  WEMesh.cpp
